--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,20 @@
-cmake_minimum_required(VERSION 4.0)
-project(afl_1 C)
+cmake_minimum_required(VERSION 3.16)
+project(afl_1 LANGUAGES C)
 
-set(CMAKE_C_STANDARD 23)
+# Brug C11 (som i vores gcc-kommander)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
-add_executable(afl_1 main.c)
+# Byg programmet af main.c + din implementering
+add_executable(afl_1
+    main.c
+    hamming.c
+)
+
+# (Valgfrit) gode advarsler
+if (MSVC)
+  target_compile_options(afl_1 PRIVATE /W4)
+else()
+  target_compile_options(afl_1 PRIVATE -Wall -Wextra -Wpedantic)
+endif()
